# qgroundcontrol

./: .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  QGCCommon.pri  QGCExternalLibs.pri  QGCPostLinkInstaller.pri  android.pri  clang-format-config.json  justfile  qgroundcontrol.pro  qgroundcontrol.qrc
android/: AndroidManifest.xml  CMakeLists.txt  android.pri  build.gradle
android/package/: AndroidManifest.xml  build.gradle
android/src/: AndroidInit.cpp  AndroidInterface.cc  AndroidInterface.h  AndroidSerial.cpp  CMakeLists.txt
custom/: CMakeLists.txt  custom.qrc  qgcresources.qrc  qgroundcontrol.exclusion  qgroundcontrol.qrc
custom/cmake/: CustomOverrides.cmake
custom/qml/: DroneIndicator.qml  FlyViewSettings.qml  FlyViewToolStripActionList.qml  GPUIndicator.qml  Geofence.qml  GuidedActionAltitude.qml  GuidedActionAntiCollisionLight.qml  GuidedActionBeacon.qml  GuidedActionNavigationLight.qml  GuidedActionPause.qml  GuidedActionRemoteId.qml  GuidedActionSpotlight.qml  GuidedActionsController.qml  GuidedValueSlider.qml  HelpSettings.qml  MainRootWindow.qml  MainStatusIndicator.qml  MultiRotorChecklist.qml  NextVisionIndicatorButton.qml  NextVisionSettings.qml  NextVisionSettingsMenu.qml  NextVisionVideoControl.qml  PhotoVideoControl.qml  SettingsPagesModel.qml  TelemetrySettings.qml  VehicleWarnings.qml  ViewproSettings.qml  ViewproSettingsMenu.qml  ViewproVideoControl.qml  VirtualJoystick.qml
custom/src/: CustomOptions.cc  CustomOptions.h  CustomPlugin.cc  CustomPlugin.h
libs/: CMakeLists.txt
libs/libevents/: CMakeLists.txt
libs/qmlglsink/: CMakeLists.txt
libs/qtandroidserialport/: CMakeLists.txt
src/: CMakeLists.txt  JsonHelper.cc  MobileScreenMgr.cc  MobileScreenMgr.h  QGC.cc  QGC.h  QGCApplication.cc  QGCApplication.h  QGCCachedFileDownload.cc  QGCCachedFileDownload.h  QGCLoggingCategory.h  QGCToolbox.cc  QGCToolbox.h  RunGuard.h  main.cc
src/ADSB/: ADSBVehicle.cc  ADSBVehicle.h  ADSBVehicleManager.cc  CMakeLists.txt
src/API/: CMakeLists.txt  QGCCorePlugin.cc
src/AirLink/: AirLinkManager.cc  AirlinkLink.cc  AirlinkLink.h  CMakeLists.txt
src/AnalyzeView/: CMakeLists.txt  ExifParser.cc  ExifParser.h  GeoTagController.cc  GeoTagController.h  GeoTagWorker.cc  GeoTagWorker.h  LogDownloadController.cc  LogDownloadController.h  LogDownloadPage.qml  MAVLinkChart.qml  MAVLinkChartController.cc  MAVLinkChartController.h  MAVLinkConsoleController.cc  MAVLinkConsoleController.h  MAVLinkInspectorController.cc  MAVLinkInspectorController.h  MAVLinkInspectorPage.qml  MAVLinkMessage.cc  MAVLinkMessage.h  MAVLinkMessageField.cc  MAVLinkMessageField.h  MAVLinkSystem.cc  MAVLinkSystem.h  MavlinkConsoleController.cc  MavlinkConsoleController.h  PX4LogParser.cc  PX4LogParser.h  ULogParser.cc  ULogParser.h
src/Android/: AndroidInit.cc
src/Audio/: AudioOutput.h  CMakeLists.txt
src/AutoPilotPlugins/: AutoPilotPlugin.h  CMakeLists.txt
src/Camera/: CMakeLists.txt  MavlinkCameraControl.cc  MavlinkCameraControl.h  QGCCameraControl.cc  QGCCameraControl.h  QGCCameraIO.cc  QGCCameraIO.h  QGCCameraManager.cc  QGCCameraManager.h  SimulatedCameraControl.cc  SimulatedCameraControl.h  VehicleCameraControl.cc  VehicleCameraControl.h
src/Comms/: BluetoothLink.cc  BluetoothLink.h  BluetoothLowEnergyLink.cc  BluetoothLowEnergyLink.h  CMakeLists.txt  LinkConfiguration.cc  LinkConfiguration.h  LinkInterface.cc  LinkInterface.h  LinkManager.cc  LinkManager.h  LogReplayLink.cc  LogReplayLink.h  MAVLinkProtocol.cc  MAVLinkProtocol.h  QGCSerialPortInfo.cc  QGCSerialPortInfo.h  SerialLink.cc  SerialLink.h  TCPLink.cc  TCPLink.h  UDPLink.cc  UDPLink.h  UdpIODevice.cc  UdpIODevice.h
src/Compression/: CMakeLists.txt
src/FactSystem/: CMakeLists.txt  Fact.cc  Fact.h  FactGroup.cc  FactGroup.h  FactMetaData.cc  FactSystem.cc  FactValueSliderListModel.cc  FactValueSliderListModel.h  ParameterManager.cc  ParameterManager.h  SettingsFact.cc  SettingsFact.h
src/FirmwarePlugin/: CMakeLists.txt  FirmwarePlugin.cc  FirmwarePlugin.h  FirmwarePluginFactory.cc  FirmwarePluginFactory.h  FirmwarePluginManager.cc  FirmwarePluginManager.h
src/FirstRunPromptDialogs/: CMakeLists.txt
src/FlightDisplay/: CMakeLists.txt  FlightDisplayViewVideo.qml  FlyViewMap.qml  FlyViewWidgetLayer.qml  GuidedActionsController.qml  QGCVideoBackground.qml  VideoThermalBackground.qml
src/FlightMap/: CMakeLists.txt
src/FollowMe/: CMakeLists.txt  FollowMe.cc  FollowMe.h
src/GPS/: CMakeLists.txt  GPSManager.h  GPSPositionMessage.h  GPSProvider.cc  GPSProvider.h  GPSRtk.cc  GPSRtk.h  RTCMMavlink.cc  RTCMMavlink.h  definitions.h  gpsdrivers.patch
src/Geo/: CMakeLists.txt  QGCGeo.cc  QGCGeo.h
src/Gimbal/: CMakeLists.txt
src/Joystick/: CMakeLists.txt  Joystick.cc  Joystick.h  JoystickAndroid.cc  JoystickAndroid.h  JoystickManager.cc  JoystickManager.h  JoystickMavCommand.cc  JoystickMavCommand.h  JoystickSDL.cc  JoystickSDL.h
src/MAVLink/: CMakeLists.txt  ImageProtocolManager.h  MAVLinkMessage.cc  MAVLinkMessage.h  MAVLinkStreamConfig.cc  MAVLinkStreamConfig.h  MAVLinkSystem.h  QGCMAVLink.cc  QGCMAVLink.h  StatusTextHandler.cc  SysStatusSensorInfo.cc  SysStatusSensorInfo.h
src/MissionManager/: CMakeLists.txt  CameraCalc.cc  CameraCalc.h  CameraSection.cc  CameraSection.h  CameraSpec.cc  CameraSpec.h  ComplexMissionItem.cc  ComplexMissionItem.h  CorridorScanComplexItem.cc  CorridorScanComplexItem.h  FixedWingLandingComplexItem.cc  GeoFenceController.cc  GeoFenceController.h  GeoFenceManager.cc  GeoFenceManager.h  KMLDomDocument.cc  LandingComplexItem.cc  LandingComplexItem.h  MissionCommandList.cc  MissionCommandList.h  MissionCommandTree.cc  MissionCommandTree.h  MissionCommandUIInfo.h  MissionController.cc  MissionController.h  MissionItem.cc  MissionItem.h  MissionManager.cc  MissionSettingsItem.cc  MissionSettingsItem.h  PlanElementController.cc  PlanElementController.h  PlanManager.cc  PlanManager.h  PlanMasterController.cc  QGCMapCircle.cc  (+25 more)
test/: CMakeLists.txt  TESTING.md  UnitTest.qrc  UnitTestList.cc  UnitTestList.h
(+1202 files in other folders)
