add_subdirectory(libevents)
add_subdirectory(shapelib)

if (WIN32)
    add_subdirectory(sdl2)
    add_subdirectory(zlib)
endif()

if (GST_FOUND)
    add_subdirectory(qmlglsink)
endif()

option(QT6_DISABLE_DNSENGINE "Disable DNS Engine" OFF)
if (QT6_DISABLE_DNSENGINE)
    message(STATUS "DNS Engine disabled")
    add_compile_definitions(QT6_DISABLE_DNSENGINE=ON)
else()
    set(BUILD_SHARED_LIBS OFF CACHE BOOL "Force qmdnsengine to build as static" FORCE)
    add_subdirectory(qmdnsengine)
endif()
