find_package(Qt6
    REQUIRED
    COMPONENTS
        Bluetooth
        Charts
        Concurrent
        Core
        Core5Compat
        Location
        Multimedia
        Network
        Positioning
        Quick
        QuickControls2
        QuickWidgets
        OpenGL
        Sql
        Svg
        Test
        TextToSpeech
        Widgets
        Xml
    OPTIONAL_COMPONENTS
        SerialPort
    HINTS
        {QT_LIBRARY_HINTS}
)

qt_add_library(qgc STATIC
    CmdLineOptParser.cc
    CmdLineOptParser.h
    JsonHelper.cc
    JsonHelper.h
    main.cc
    QGC.cc
    QGC.h
    QGCApplication.cc
    QGCApplication.h
    QGCCachedFileDownload.cc
    QGCCachedFileDownload.h
    QGCConfig.h
    QGCFileDownload.cc
    QGCFileDownload.h
    QGCLoggingCategory.cc
    QGCLoggingCategory.h
    QGCQGeoCoordinate.cc
    QGCQGeoCoordinate.h
    QGCTemporaryFile.cc
    QGCTemporaryFile.h
    QGCToolbox.cc
    QGCToolbox.h
    RunGuard.cc
    RunGuard.h
)

if(ANDROID)
    target_sources(qgc
        PRIVATE
            MobileScreenMgr.cc
            MobileScreenMgr.h
    )
endif()

target_include_directories(qgc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/QGCApplication.cc PROPERTIES COMPILE_DEFINITIONS APP_VERSION_STR="${APP_VERSION_STR}")

add_subdirectory(ADSB)
add_subdirectory(AirLink)
add_subdirectory(AnalyzeView)
add_subdirectory(api)
add_subdirectory(Audio)
add_subdirectory(AutoPilotPlugins)
add_subdirectory(Camera)
add_subdirectory(comm)
add_subdirectory(Compression)
add_subdirectory(FactSystem)
add_subdirectory(FirmwarePlugin)
add_subdirectory(FlightDisplay)
add_subdirectory(FlightMap)
add_subdirectory(FollowMe)
add_subdirectory(Geo)
add_subdirectory(GPS)
add_subdirectory(Joystick)
add_subdirectory(MissionManager)
add_subdirectory(PlanView)
add_subdirectory(PositionManager)
add_subdirectory(QmlControls)
add_subdirectory(QtLocationPlugin)
add_subdirectory(Settings)
add_subdirectory(Terrain)
add_subdirectory(ui)
add_subdirectory(UTMSP)
add_subdirectory(Vehicle)
add_subdirectory(VehicleSetup)
add_subdirectory(VideoManager)
add_subdirectory(VideoReceiver)
add_subdirectory(Viewer3D)

target_link_libraries(qgc
    PRIVATE
        Qt6::QuickControls2
        Qt6::QuickWidgets
        ADSB
        AnalyzeView
        api
        Audio
        AutoPilotPlugins
        Camera
        comm
        compression
        FactSystem
        FirmwarePlugin
        FollowMe
        Geo
        gps
        Joystick
        MissionManager
        PositionManager
        QmlControls
        QtLocationPlugin
        Settings
        Terrain
        UTMSP
        Vehicle
        VehicleSetup
        VideoManager
        Viewer3D
    PUBLIC
        Qt6::Core
        Qt6::CorePrivate
        Qt6::Network
        Qt6::Positioning
        Qt6::Widgets
)

if(NOT ${QGC_AIRLINK_DISABLED})
    target_link_libraries(qgc PRIVATE AirLink)
else()
    target_compile_definitions(qgc PUBLIC QGC_AIRLINK_DISABLED)
endif()
